# ChangeLog for x11-misc/root-portal
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/root-portal/ChangeLog,v 1.17 2005/05/30 17:24:37 mrness Exp $

*root-portal-0.5.2 (30 May 2005)

  30 May 2005; Alin Nastac <mrness@gentoo.org> +root-portal-0.5.2.ebuild:
  Version bump (#86833).

  17 May 2005; Markus Nigbur <pyrania@gentoo.org> root-portal-0.5.0.ebuild:
  Fixed libxml dependency, version 2 is not yet supported.

  07 Nov 2004; <pyrania@gentoo.org> root-portal-0.5.0.ebuild:
  set USE_DESTDIR=1. Closing bug #49130.

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  root-portal-0.4.11.ebuild, root-portal-0.5.0.ebuild:
  Masked root-portal-0.5.0.ebuild stable for ppc

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  root-portal-0.4.11.ebuild:
  Masked root-portal-0.4.11.ebuild stable for ppc

  21 Aug 2004; <spider@gentoo.org> root-portal-0.4.11.ebuild,
  root-portal-0.5.0.ebuild:
  ORBit[,2] -> orbit DEPEND change

  01 Jun 2004; Brandon Hale <tseng@gentoo.org> root-portal-0.4.11.ebuild:
  Fixed IUSE

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> root-portal-0.4.11.ebuild:
  Add inherit eutils

  11 Apr 2004; Markus Nigbur <pyrania@gentoo.org> root-portal-0.5.0.ebuild:
  Stable on x86.

  15 Jan 2004; Brandon Hale <tseng@gentoo.org> root-portal-0.5.0.ebuild:
  Further ebuild tweaks, use the gnome2 eclass. Thanks Foser.

  15 Jan 2004; Brandon Hale <tseng@gentoo.org> root-portal-0.5.0.ebuild:
  Update dependencies, see #38288

*root-portal-0.5.0 (06 Dec 2003)

  06 Dec 2003; Brandon Hale <tseng@gentoo.org> root-portal-0.5.0.ebuild:
  Version bump.

  07 Dec 2003; <spider@gentoo.org> root-portal-0.4.11.ebuild:
  stable x86

  03 Nov 2003; Abhishek Amit <abhishek@gentoo.org> metadata.xml:
  Added metadata.xml

*root-portal-0.4.11 (16 Oct 2002)

  30 Nov 2002; Jon Nall <nall@gentoo.org> root-portal-0.4.11.ebuild :
  added ~ppc
